--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "none",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "outFile": "./build/build.js",
     "preserveConstEnums": true,
     "removeComments": true,
